# rust-othello

./: .editorconfig  Cargo.toml  README.md
.github/: labels.yml
.github/workflows/: ci.yml
examples/: example.rs
src/: board.rs  color.rs  config.rs  grid_position.rs  lib.rs  main.rs  othello.rs  player.rs  theme.rs
