[package]
name = "rust-othello"
version = "0.2.0"
authors = ["Valentin Colin <valentin.colin78@gmail.com>"]
edition = "2021"
description = "A game of othello"
readme = "README.md"
homepage = "https://github.com/ValentinColin/rust-othello.git"
repository = "https://github.com/ValentinColin/rust-othello.git"
license = "MIT"
# licence-file = "LICENSE"
keywords = ["game"]
default-run = "rust-othello"

[dependencies]
clippy = {version = "0.0.21", optional = true}
ggez = "0.7.0"
grid = "0.6.0"
glam = { version = "0.20", features = ["mint"] }
# Has to be the same version of mint that our math lib uses here.
mint = "0.5"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]

[features]
default = []
dev = ["clippy"]
